--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -124,6 +124,9 @@ a {
   -ms-transition: color 0.5s ease;
   -ms-transition: text-shadow 0.5s ease;
 }
+thead tr{
+	background:#E1E1E1;
+	}
 
 #main_content a:hover {
   color: #0069ba;
@@ -143,12 +146,11 @@ strong {
   font-weight: bold;
 }
 
-img {
+.projectWrap img {
   position: relative;
   margin: 0 auto;
   max-width: 739px;
   padding: 5px;
-  margin: 10px 0 10px 0;
   border: 1px solid #ebebeb;
 
   box-shadow: 0 0 5px #ebebeb;
@@ -272,7 +274,7 @@ Full-Width Styles
 
 .inner {
   position: relative;
-  max-width: 640px;
+  max-width: 820px;
   padding: 20px 10px;
   margin: 0 auto;
 }
@@ -301,9 +303,6 @@ Full-Width Styles
   background: linear-gradient(top, #373737, #212121);
 }
 
-#header_wrap .inner {
-  padding: 50px 10px 30px 10px;
-}
 
 #project_title {
   margin: 0;
@@ -368,6 +367,7 @@ Full-Width Styles
 
 #main_content {
   padding-top: 40px;
+  min-height:400px
 }
 
 #footer_wrap {
